@@ -1,1 +1,11 @@
 # Tomcat源码调试笔记
+
+- 启动参数
+```
+-Dcatalina.home=/Users/chenmin/GitHub/tomcat
+-Dcatalina.base=/Users/chenmin/GitHub/tomcat
+-Djava.endorsed.dirs=/Users/chenmin/GitHub/tomcat/endorsed
+-Djava.io.tmpdir=/Users/chenmin/GitHub/tomcat/temp
+-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager
+-Djava.util.logging.config.file=/Users/chenmin/GitHub/tomcat/conf/logging.properties
+```
